samples/_failures_safe/1761486149_64fb5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f7f077f.c: In function ‘main’:
./samples/SAFE/__tmp_2f7f077f.c:153:16: error: missing terminating " character
  153 |         printf("1. Multiply matrices (A
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2f7f077f.c:153:9: error: expected expression at end of input
  153 |         printf("1. Multiply matrices (A
      |         ^~~~~~
./samples/SAFE/__tmp_2f7f077f.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f7f077f.c:153:9: error: expected declaration or statement at end of input
